--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Menu
             </div>
             <div>
-                <img class="navimg" onclick='document.getElementById("top").scrollIntoView()' src="../public/img/Logo_of_Blackpink.svg.png" alt="">
+                <img class="navimg" onclick='document.getElementById("top").scrollIntoView()' src="./public/img/Logo_of_Blackpink.svg.png" alt="">
             </div>
         </div>
         <div class="row menu_nav" id="menu_nav">
@@ -35,19 +35,19 @@
     </div>
     <div class="row">
         <div class="mem" onclick='document.getElementById("jennie").scrollIntoView()'>
-            <img class="mem_pic" src="../public/img/blackpink_pink_venom_concept_jennie.jpg" >
+            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_jennie.jpg" >
             <div class="mem_name">JENNIE</div>
         </div>
         <div class="mem" onclick='document.getElementById("jisoo").scrollIntoView()'>
-            <img class="mem_pic" src="../public/img/blackpink_pink_venom_concept_jisoo.jpg" >
+            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_jisoo.jpg" >
             <div class="mem_name">JISOO</div>
         </div>
         <div class="mem" onclick='document.getElementById("lisa").scrollIntoView()'>
-            <img class="mem_pic" src="../public/img/blackpink_pink_venom_concept_lisa.jpg" >
+            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_lisa.jpg" >
             <div class="mem_name">LISA</div>
         </div>
         <div class="mem" onclick='document.getElementById("rose").scrollIntoView()'>
-            <img class="mem_pic" src="../public/img/blackpink_pink_venom_concept_rose.jpg" >
+            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_rose.jpg" >
             <div class="mem_name">ROSE</div>
         </div>
     </div>
@@ -167,7 +167,7 @@
         <div class="row" style="margin-top: 15px;">
             <div class="card_al">
                 <div >
-                    <img onclick="change_alabum('BORNPINK')" class="card_img" src="../public/img/ab67616d00001e024aeaaeeb0755f1d8a8b51738.jpg" alt="">
+                    <img onclick="change_alabum('BORNPINK')" class="card_img" src="./public/img/ab67616d00001e024aeaaeeb0755f1d8a8b51738.jpg" alt="">
                 </div>
                 <div class="card_text">
                     BORNPINK
@@ -175,7 +175,7 @@
             </div>
             <div class="card_al">
                 <div >
-                    <img onclick="change_alabum('THE_ALBUM')" class="card_img" src="../public/img/960713.jpg" alt="">
+                    <img onclick="change_alabum('THE_ALBUM')" class="card_img" src="./public/img/960713.jpg" alt="">
                 </div>
                 <div class="card_text">
                     THE ALBUM
@@ -183,7 +183,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('KILL_THIS_LOVE')">
                 <div >
-                    <img class="card_img" src="../public/img/Blackpink_-_Kill_This_Love.png" alt="">
+                    <img class="card_img" src="./public/img/Blackpink_-_Kill_This_Love.png" alt="">
                 </div>
                 <div class="card_text">
                     KILL THIS LOVE
@@ -193,7 +193,7 @@
         <div class="row" style="margin-top: 15px;">
             <div class="card_al" onclick="change_alabum('SQUARE_UP')">
                 <div >
-                    <img class="card_img" src="../public/img/4msj05.jpg" alt="">
+                    <img class="card_img" src="./public/img/4msj05.jpg" alt="">
                 </div>
                 <div class="card_text">
                     SQUARE UP
@@ -201,7 +201,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('SQUARE_TWO')">
                 <div >
-                    <img class="card_img" src="../public/img/ab67616d0000b27318a4a215052e9f396864bd73.jpg" alt="">
+                    <img class="card_img" src="./public/img/ab67616d0000b27318a4a215052e9f396864bd73.jpg" alt="">
                 </div>
                 <div class="card_text">
                     SQUARE TWO
@@ -209,7 +209,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('SQUARE_ONE')">
                 <div >
-                    <img class="card_img" src="../public/img/ac6ceec92b35b13812c78a7ec51ee78b.jpg" alt="">
+                    <img class="card_img" src="./public/img/ac6ceec92b35b13812c78a7ec51ee78b.jpg" alt="">
                 </div>
                 <div class="card_text">
                     SQUARE ONE
@@ -224,7 +224,7 @@
         <div class="row" style="margin-top: 15px;">
             <div class="card_al" onclick="change_alabum('SOLO_')">
                 <div >
-                    <img class="card_img" src="../public/img/Jennie_–__Solo__–_Digital_Cover.png" alt="">
+                    <img class="card_img" src="./public/img/Jennie_–__Solo__–_Digital_Cover.png" alt="">
                 </div>
                 <div class="card_text"  >
                     SOLO
@@ -232,7 +232,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('R')">
                 <div >
-                    <img class="card_img" src="../public/img/Rosé_-_R.png" alt="">
+                    <img class="card_img" src="./public/img/Rosé_-_R.png" alt="">
                 </div>
                 <div class="card_text">
                     -R-
@@ -240,7 +240,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('LALISA')">
                 <div >
-                    <img class="card_img" src="../public/img/Lisa_-_Lalisa.png" alt="">
+                    <img class="card_img" src="./public/img/Lisa_-_Lalisa.png" alt="">
                 </div>
                 <div class="card_text">
                     LALISA
