--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Menu
             </div>
             <div>
-                <img class="navimg" onclick='document.getElementById("top").scrollIntoView()' src="./public/img/Logo_of_Blackpink.svg.png" alt="">
+                <img class="navimg" onclick='document.getElementById("top").scrollIntoView()' src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Logo_of_Blackpink.svg/2560px-Logo_of_Blackpink.svg.png" alt="">
             </div>
         </div>
         <div class="row menu_nav" id="menu_nav">
