--- a/index.html
+++ b/index.html
@@ -8,6 +8,287 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+html {
+    scroll-behavior: smooth;
+  }
+body{
+    font-family: 'Kanit', sans-serif;
+} 
+.row{
+    display: flex;
+}
+.navbar{
+    position: fixed;
+    height: 71px;
+    width: 100%;
+    background-color: #000000;
+    z-index: 1;
+    }
+.nav-exp{
+    display: none;
+    color: #F8A4BD;
+    font-size:20px;
+    text-align: center;
+    padding-top: 15px;
+    height: 49px;
+    width: 64px;
+    border: 3px solid #F8A4BD;
+}
+.navimg{
+    width: 316px;
+    height: 70px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.navmenu{
+    height: 71;
+    width: 205px;
+    color: #F8A4BD;
+    font-size: 35px;
+    margin-top: 10px;
+    text-align: center;
+    background-color: #000000;
+}
+.navmenu:hover{
+    border: 3px solid #F8A4BD;
+    transition: 300ms;
+}
+.menu_tab{
+    color: #F8A4BD;
+    width: 296px;
+height: 70px;
+font-size: 35px;
+font-weight: bolder;
+margin: 20px;
+padding-top: 10px;
+text-align: center;
+background-color: #000000;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 30px;}
+.mem{
+    width: 20%;
+    margin-left: 2.5%;
+margin-right: 2.5%;
+}
+.mem:hover{
+    transform: scale(1.1);
+    transition: 300ms;
+}
+.mem_pic{
+object-fit: cover;
+width: 100%;
+box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.mem_name{
+    width: 100%; 
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+}
+.mem_gal{
+    width: 47%;
+    margin-left: 3%;
+    border-radius: 15px 0 0 15px;
+
+}
+.mem_about{
+    color: #F8A4BD;
+    font-size: 25px;
+    padding-left: 20px;
+    width: 47%;
+    margin-right: 3%;
+    background: #262525;
+    border-radius: 0 15px 15px 0;
+}
+.ro {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .co {
+    flex: 25%;
+    width: 50%;
+    padding: 0 4px;
+  }
+  
+  .co img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  .co img:hover{
+    transform: scale(1.5);
+    transition: 300ms;
+}
+  
+.card_al{
+    width: 30%;
+    height: 500px;
+    background: #262525;
+    border-radius: 15px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
+.card_al:hover{
+    transform: scale(1.05);
+    transition: 300ms;
+}
+.card_img{
+    object-fit: contain;
+    width: 100%;
+    height: 400px;
+    border-radius: 15px 15px 0 0;
+}
+.card_text{
+    text-align: center;
+    color: #F8A4BD;
+    font-size: 50px;
+    margin-top: 5px;
+    font-weight: 700;
+}
+.card_vi{
+    width: 45%;
+    height: 500px;
+    background: #262525;
+    border-radius: 15px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
+.yt{
+    object-fit: cover;
+    width: 100%;
+    height: 400px;
+}
+.list_music{
+    width: 45%;
+    height: 500px;
+    background: #262525;
+    border-radius: 15px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
+.Music{
+    color: #ff5789;
+    font-size: 45px;
+    margin-top: 5px;
+    font-weight: 700;
+    margin-left: 15px;
+}
+.song_list{
+    color: #F8A4BD;
+    font-size: 35px;
+    margin-top: 5px;
+    font-weight: 500;
+    margin-left: 30px;
+    display: none;
+}
+.song_list>div:hover{
+    transform: scale(1.05);
+    transition: 300ms;
+}
+@media only screen and (max-width: 1000px) {
+    .card_text{
+        font-size: 35px;
+
+    }
+}
+@media only screen and (max-width: 600px) {
+    .row{
+        display: block;
+    }
+    .nav-exp{
+        display: block;
+    }
+    .menu_nav{
+        display: none;   
+    }
+    .navmenu{
+        margin-top: 0;
+        border: 2px solid #F8A4BD;
+    }
+    .mem{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+    }
+    .mem_pic{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+    }
+    .mem_name{
+        width: 100%; 
+        text-align: center;
+        font-size: 40px;
+        font-weight: 500;
+    }
+    .mem_gal{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+    
+    }
+    .mem_about{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+        border-radius: 15px 15px 15px 15px;
+    }
+    .card_al{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 5px;
+    }
+    .card_img{
+        object-fit: contain;
+        width: 100%;
+        height: 400px;
+        border-radius: 15px 15px 0 0;
+    }
+    .card_text{
+        text-align: center;
+        color: #F8A4BD;
+        font-size: 35px;
+        margin-top: 5px;
+        font-weight: 700;
+    }
+    .card_vi{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+    }
+    .yt{
+        object-fit: cover;
+        width: 100%;
+        height: 400px;
+    }
+    .list_music{
+        width: 95%;
+        margin-left: 2.5%;
+    margin-right: 2.5%;
+    height: auto;
+    }
+    .Music{
+        color: #ff5789;
+        font-size: 45px;
+        margin-top: 5px;
+        font-weight: 700;
+        margin-left: 15px;
+    }
+    .song_list{
+        color: #F8A4BD;
+        font-size: 35px;
+        margin-top: 5px;
+        font-weight: 500;
+        margin-left: 15px;
+    }
+  }
+</style>
 <body>
     <div class="navbar row">
         
@@ -16,7 +297,7 @@
                 Menu
             </div>
             <div>
-                <img class="navimg" onclick='document.getElementById("top").scrollIntoView()' src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Logo_of_Blackpink.svg/2560px-Logo_of_Blackpink.svg.png" alt="">
+                <img class="navimg" onclick='document.getElementById("top").scrollIntoView()' src="/img/Logo_of_Blackpink.svg.png" alt="">
             </div>
         </div>
         <div class="row menu_nav" id="menu_nav">
@@ -35,19 +316,19 @@
     </div>
     <div class="row">
         <div class="mem" onclick='document.getElementById("jennie").scrollIntoView()'>
-            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_jennie.jpg" >
+            <img class="mem_pic" src="/img/blackpink_pink_venom_concept_jennie.jpg" >
             <div class="mem_name">JENNIE</div>
         </div>
         <div class="mem" onclick='document.getElementById("jisoo").scrollIntoView()'>
-            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_jisoo.jpg" >
+            <img class="mem_pic" src="/img/blackpink_pink_venom_concept_jisoo.jpg" >
             <div class="mem_name">JISOO</div>
         </div>
         <div class="mem" onclick='document.getElementById("lisa").scrollIntoView()'>
-            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_lisa.jpg" >
+            <img class="mem_pic" src="/img/blackpink_pink_venom_concept_lisa.jpg" >
             <div class="mem_name">LISA</div>
         </div>
         <div class="mem" onclick='document.getElementById("rose").scrollIntoView()'>
-            <img class="mem_pic" src="./public/img/blackpink_pink_venom_concept_rose.jpg" >
+            <img class="mem_pic" src="/img/blackpink_pink_venom_concept_rose.jpg" >
             <div class="mem_name">ROSE</div>
         </div>
     </div>
@@ -167,7 +448,7 @@
         <div class="row" style="margin-top: 15px;">
             <div class="card_al">
                 <div >
-                    <img onclick="change_alabum('BORNPINK')" class="card_img" src="./public/img/ab67616d00001e024aeaaeeb0755f1d8a8b51738.jpg" alt="">
+                    <img onclick="change_alabum('BORNPINK')" class="card_img" src="/img/ab67616d00001e024aeaaeeb0755f1d8a8b51738.jpg" alt="">
                 </div>
                 <div class="card_text">
                     BORNPINK
@@ -175,7 +456,7 @@
             </div>
             <div class="card_al">
                 <div >
-                    <img onclick="change_alabum('THE_ALBUM')" class="card_img" src="./public/img/960713.jpg" alt="">
+                    <img onclick="change_alabum('THE_ALBUM')" class="card_img" src="/img/960713.jpg" alt="">
                 </div>
                 <div class="card_text">
                     THE ALBUM
@@ -183,7 +464,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('KILL_THIS_LOVE')">
                 <div >
-                    <img class="card_img" src="./public/img/Blackpink_-_Kill_This_Love.png" alt="">
+                    <img class="card_img" src="/img/Blackpink_-_Kill_This_Love.png" alt="">
                 </div>
                 <div class="card_text">
                     KILL THIS LOVE
@@ -193,7 +474,7 @@
         <div class="row" style="margin-top: 15px;">
             <div class="card_al" onclick="change_alabum('SQUARE_UP')">
                 <div >
-                    <img class="card_img" src="./public/img/4msj05.jpg" alt="">
+                    <img class="card_img" src="/img/4msj05.jpg" alt="">
                 </div>
                 <div class="card_text">
                     SQUARE UP
@@ -201,7 +482,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('SQUARE_TWO')">
                 <div >
-                    <img class="card_img" src="./public/img/ab67616d0000b27318a4a215052e9f396864bd73.jpg" alt="">
+                    <img class="card_img" src="/img/ab67616d0000b27318a4a215052e9f396864bd73.jpg" alt="">
                 </div>
                 <div class="card_text">
                     SQUARE TWO
@@ -209,7 +490,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('SQUARE_ONE')">
                 <div >
-                    <img class="card_img" src="./public/img/ac6ceec92b35b13812c78a7ec51ee78b.jpg" alt="">
+                    <img class="card_img" src="/img/ac6ceec92b35b13812c78a7ec51ee78b.jpg" alt="">
                 </div>
                 <div class="card_text">
                     SQUARE ONE
@@ -224,7 +505,7 @@
         <div class="row" style="margin-top: 15px;">
             <div class="card_al" onclick="change_alabum('SOLO_')">
                 <div >
-                    <img class="card_img" src="./public/img/Jennie_–__Solo__–_Digital_Cover.png" alt="">
+                    <img class="card_img" src="/img/Jennie_–__Solo__–_Digital_Cover.png" alt="">
                 </div>
                 <div class="card_text"  >
                     SOLO
@@ -232,7 +513,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('R')">
                 <div >
-                    <img class="card_img" src="./public/img/Rosé_-_R.png" alt="">
+                    <img class="card_img" src="/img/Rosé_-_R.png" alt="">
                 </div>
                 <div class="card_text">
                     -R-
@@ -240,7 +521,7 @@
             </div>
             <div class="card_al" onclick="change_alabum('LALISA')">
                 <div >
-                    <img class="card_img" src="./public/img/Lisa_-_Lalisa.png" alt="">
+                    <img class="card_img" src="/img/Lisa_-_Lalisa.png" alt="">
                 </div>
                 <div class="card_text">
                     LALISA
